--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Ato Toffah <atotoffah@gmail.com>
-Jessica Awuradjoa Asamoah <jessicaasamoah903@gmail.com>
+Irondi Jonathan <irondicjonathan@gmail.com>
+
